[project]
name = "bitnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "gradio>=5.25.2",
    "torch>=2.6.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/shumingma/transformers.git" }
